plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '6.0.34'
}
version = mod_version
group = mod_group_id
base {
    archivesName = mod_id
}
java {
    withSourcesJar()
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}
minecraft {
    mappings channel: 'official', version: minecraft_version
    copyIdeResources = true
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level.root', 'debug'
            property 'forge.logging.level.net.minecraft', 'debug'
            property 'forge.logging.level.net.minecraftforge', 'debug'
            mods {
                wardentools {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level.root', 'debug'
            property 'forge.logging.level.net.minecraft', 'debug'
            property 'forge.logging.level.net.minecraftforge', 'debug'
            args '--nogui'
            mods {
                wardentools {
                    source sourceSets.main
                }
            }
        }
        gameTestServer {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level.root', 'debug'
            property 'forge.logging.level.net.minecraft', 'debug'
            property 'forge.logging.level.net.minecraftforge', 'debug'
            mods {
                wardentools {
                    source sourceSets.main
                }
            }
        }
        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.level.root', 'debug'
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
            mods {
                wardentools {
                    source sourceSets.main
                }
            }
        }
    }
}
sourceSets.main.resources { srcDir 'src/generated/resources' }
repositories {
    mavenLocal()
    maven { url = 'https://maven.minecraftforge.net/' }
}
dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
}
tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'      : mod_id,
                'Specification-Vendor'     : mod_authors,
                'Specification-Version'    : '1',
                'Implementation-Title'     : project.name,
                'Implementation-Version'   : jar.archiveVersion,
                'Implementation-Vendor'    : mod_authors,
                'Implementation-Timestamp' : new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").format(new java.util.Date()),
                'Built-On-Java'            : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
                'Built-On'                 : org.gradle.util.GradleVersion.current().toString()
        ])
    }
}
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/mods.toml') {
        expand replaceProperties
    }
}
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
            artifact sourcesJar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('--enable-preview')
    options.release = 17
}

// Ensure tests (if any) are run with preview features enabled
tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}
